second test commit

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul class="header-user-buttons__list">
           <li class="header-user-buttons__item">
             <img class="header-user-buttons__login-icon" src="img/icons/icon-login.svg" alt="Иконка входа">
-            <a class="user-button login" href="">Войти</a>
+            <a class="user-button login" href="">Залогиниться</a>
           </li>
           <li class="header-user-buttons__item">
             <a class="user-button registration" href="">Регистрация</a>
