--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,44 @@
 </head>
 <body class="page-body">
   <header class="header">
-
+    <div class="header__wrapper_blue">
+      <div class="header-top container">
+        <img class="header__logo" src="img/logo-technomart.svg" alt="Логотип Техномарт">
+        <label for="header__search"></label>
+        <input class="header__search" type="search" placeholder="Поиск:" id="header__search">
+        <ul class="header__button-list">
+          <li class="header__button-item">Закладки: 0</li>
+          <li class="header__button-item">Корзина: 10</li>
+          <li class="header__button-item">Оформить заказ</li>
+        </ul>
+      </div>
+    </div>
+    <div class="header-middle container">
+      <p class="header__description">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+      <div class="header__address">
+        <a href="#" class="header__address-phone">+7 (812) 555-05-55</a>
+        <p class="header__address-description">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </div>
+      <div class="header__user-buttons">
+        <div class="header__user-links">
+          <a href="" class="header__username-btn">Артем Нарыжных</a>
+          <a href="" class="header__logout-btn">
+            <div class="svg-wrapper">
+              <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 8.5L11.125 0V6H5.125V11H11.125V17L20 8.5Z" fill="#C5C5C5"/>
+                <path
+                  d="M2.10604 13.952V3.048C2.12404 2.672 2.27704 1.991 3.11604 1.991H8.14304V0H3.11604C0.938036 0 0.112036 1.81 0.0870361 3.027V13.973C0.112036 15.189 0.938036 17 3.11604 17H8.14304V15.01H3.11604C2.27704 15.01 2.12404 14.327 2.10604 13.952Z"
+                  fill="#C5C5C5"/>
+              </svg>
+            </div>
+          </a>
+        </div>
+        <ul class="header__user-nav">
+          <li class="header__user-item">Мои заказы</li>
+          <li class="header__user-item">Личный кабинет</li>
+        </ul>
+      </div>
+    </div>
   </header>
   <main class="main">
 
