--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav__link" href="#">Компания</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">Каталог</a>
+            <a class="nav__link" href="catalog.html">Каталог</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#">Новости</a>
