Created catalog, filter and breadcrumbs

--- a/catalog.html
+++ b/catalog.html
@@ -72,7 +72,134 @@
     </nav>
   </header>
   <main class="main">
-
+    <div class="container">
+      <ul class="main__breadcrumbs breadcrumbs">
+        <li
+          class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__link"><img src="img/icons/icon-home.svg"
+                                                                                        alt="Ссылка на Главную"></a></li>
+        <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Каталог</a></li>
+        <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Инструмент</a></li>
+        <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Перфораторы</a></li>
+      </ul>
+      <h1 class="main__title">Перфораторы</h1>
+      <section class="main__catalog catalog">
+        <div class="catalog__filter column-left">
+          <div class="form-description left">Фильтр:</div>
+          <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="price-filter">
+              <legend>Цена:</legend>
+              <div class="plug">Удалить этот класс!!!</div>
+            </fieldset>
+            <fieldset class="manufacturer">
+              <legend>Производители:</legend>
+              <ul class="filter__manufacturer-list">
+                <li
+                  class="filter__manufacturer-item"><input type="checkbox" name="bosh" id="bosh" checked><label for="bosh" >Bosh</label></li>
+                <li class="filter__manufacturer-item"><input type="checkbox" name="interskol" id="interskol"><label for="interskol">Интерскол</label></li>
+                <li class="filter__manufacturer-item"><input type="checkbox" name="makita" id="makita" checked><label for="makita">Makita
+                </label></li>
+                <li class="filter__manufacturer-item"><input type="checkbox" name="dewalt" id="dewalt"><label for="dewalt">Dewalt</label></li>
+                <li class="filter__manufacturer-item"><input type="checkbox" name="hitachi" id="hitachi"><label for="hitachi">Hitachi</label></li>
+              </ul>
+            </fieldset>
+            <fieldset  class="power">
+              <legend>Питание:</legend>
+              <ul class="power__list">
+                <li class="power__item"><input type="radio" name="power-type" value="battery" id="battery" checked><label for="battery">Аккумуляторные</label></li>
+                <li class="power__item"><input type="radio" name="power-type" value="socket" id="socket"><label for="socket">Сетевые</label></li>
+              </ul>
+            </fieldset>
+            <button class="filter__button" type="submit">Показать</button>
+          </form>
+        </div>
+        <div class="column__right">
+          <div class="form-description right">Сортировка:</div>
+          <div class="catalog__list">
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-6000.png" alt="BFG 6000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 6000</p>
+              <p class="card__old-price price">30500 р.</p>
+              <p class="card__current-price price">25500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-6000.png" alt="BFG 6000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 6000</p>
+              <p class="card__old-price price">30500 р.</p>
+              <p class="card__current-price price">25500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-6000.png" alt="BFG 6000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 6000</p>
+              <p class="card__old-price price">30500 р.</p>
+              <p class="card__current-price price">25500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-2000-3000.jpg" alt="BFG 3000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 3000</p>
+              <p class="card__old-price price">22500 р.</p>
+              <p class="card__current-price price">15500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-6000.png" alt="BFG 6000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 6000</p>
+              <p class="card__old-price price">30500 р.</p>
+              <p class="card__current-price price">25500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-2000-3000.jpg" alt="BFG 2000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 3000</p>
+              <p class="card__current-price price">12500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-2000-3000.jpg" alt="BFG 3000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 3000</p>
+              <p class="card__old-price price">22500 р.</p>
+              <p class="card__current-price price">15500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-6000.png" alt="BFG 6000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 6000</p>
+              <p class="card__old-price price">30500 р.</p>
+              <p class="card__current-price price">25500 р.</p>
+            </div>
+            <div class="catalog__card card">
+              <div class="card__preview">
+                <img class="card__photo" src="img/products/bfg-2000-3000.jpg" alt="BFG 2000">
+              </div>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 3000</p>
+              <p class="card__current-price price">12500 р.</p>
+            </div>
+          </div>
+          <!--          Добавить список страниц с выделением активной-->
+        </div>
+      </section>
+    </div>
+    <section class="main__description description">
+      <div class="container">
+        <h2 class="description-title">Пара слов о перфораторах</h2>
+        <p class="description-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в
+          кирпиче, бетоне и камне.<br>
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и
+          отбойного молотка.<br>
+          В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer-top container">
