--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <ul class="popular-products__list">
           <li class="popular-products__item">
             <div class="popular-products__img-wrapper">
-              <img class="popular-products__img" src="img/products/snippet-32961%20copy%203.jpg" alt="BFG 9000">
+              <img class="popular-products__img" src="img/products/bfg-9000.jpg" alt="BFG 9000">
             </div>
             <p class="popular-products__title">Перфоратор BOSCH BFG 9000</p>
             <p class="popular-products__old-price">32500 Р.</p>
@@ -140,7 +140,7 @@
           </li>
           <li class="popular-products__item">
             <div class="popular-products__img-wrapper">
-              <img class="popular-products__img" src="img/products/snippet-18927%20copy%203.jpg" alt="BFG 3000">
+              <img class="popular-products__img" src="img/products/bfg-2000-3000.jpg" alt="BFG 3000">
             </div>
             <p class="popular-products__title">Перфоратор BOSCH BFG 3000</p>
             <p class="popular-products__old-price">22500 Р.</p>
@@ -148,7 +148,7 @@
           </li>
           <li class="popular-products__item">
             <div class="popular-products__img-wrapper">
-              <img class="popular-products__img" src="img/products/snippet-945%20copy%202.png" alt="BFG 6000">
+              <img class="popular-products__img" src="img/products/bfg-6000.png" alt="BFG 6000">
             </div>
             <p class="popular-products__title">Перфоратор BOSCH BFG 6000</p>
             <p class="popular-products__old-price">30500 Р.</p>
@@ -156,7 +156,7 @@
           </li>
           <li class="popular-products__item">
             <div class="popular-products__img-wrapper">
-              <img class="popular-products__img" src="img/products/snippet-18927%20copy%203.jpg" alt="BFG 2000">
+              <img class="popular-products__img" src="img/products/bfg-2000-3000.jpg" alt="BFG 2000">
             </div>
             <p class="popular-products__title">Перфоратор BOSCH BFG 2000</p>
             <p class="popular-products__old-price">22500 Р.</p>
