Small fixes in filter styles

--- a/catalog.html
+++ b/catalog.html
@@ -93,20 +93,39 @@
             <fieldset class="manufacturer">
               <legend>Производители:</legend>
               <ul class="filter__manufacturer-list">
-                <li
-                  class="filter__manufacturer-item"><input type="checkbox" name="bosh" id="bosh" checked><label for="bosh" >Bosh</label></li>
-                <li class="filter__manufacturer-item"><input type="checkbox" name="interskol" id="interskol"><label for="interskol">Интерскол</label></li>
-                <li class="filter__manufacturer-item"><input type="checkbox" name="makita" id="makita" checked><label for="makita">Makita
-                </label></li>
-                <li class="filter__manufacturer-item"><input type="checkbox" name="dewalt" id="dewalt"><label for="dewalt">Dewalt</label></li>
-                <li class="filter__manufacturer-item"><input type="checkbox" name="hitachi" id="hitachi"><label for="hitachi">Hitachi</label></li>
+                <li class="filter__manufacturer-item">
+                  <input class="checkbox__input" type="checkbox" name="bosh" id="bosh" checked>
+                  <label class="checkbox__label" for="bosh">Bosh</label>
+                </li>
+                <li class="filter__manufacturer-item">
+                  <input class="checkbox__input" type="checkbox" name="interskol" id="interskol">
+                  <label class="checkbox__label" for="interskol">Интерскол</label>
+                </li>
+                <li class="filter__manufacturer-item">
+                  <input class="checkbox__input" type="checkbox" name="makita" id="makita" checked>
+                  <label class="checkbox__label" for="makita">Makita</label>
+                </li>
+                <li class="filter__manufacturer-item">
+                  <input class="checkbox__input" type="checkbox" name="dewalt" id="dewalt">
+                  <label class="checkbox__label" for="dewalt">Dewalt</label>
+                </li>
+                <li class="filter__manufacturer-item">
+                  <input class="checkbox__input" type="checkbox" name="hitachi" id="hitachi">
+                  <label class="checkbox__label" for="hitachi">Hitachi</label>
+                </li>
               </ul>
             </fieldset>
-            <fieldset  class="power">
+            <fieldset class="power">
               <legend>Питание:</legend>
               <ul class="power__list">
-                <li class="power__item"><input type="radio" name="power-type" value="battery" id="battery" checked><label for="battery">Аккумуляторные</label></li>
-                <li class="power__item"><input type="radio" name="power-type" value="socket" id="socket"><label for="socket">Сетевые</label></li>
+                <li class="power__item">
+                  <input class="checkbox__radio" type="radio" name="power-type" value="battery" id="battery" checked>
+                  <label class="radio__label" for="battery">Аккумуляторные</label>
+                </li>
+                <li class="power__item">
+                  <input class="checkbox__radio" type="radio" name="power-type" value="socket" id="socket">
+                  <label class="radio__label" for="socket">Сетевые</label>
+                </li>
               </ul>
             </fieldset>
             <button class="filter__button" type="submit">Показать</button>
@@ -159,7 +178,7 @@
               <div class="card__preview">
                 <img class="card__photo" src="img/products/bfg-2000-3000.jpg" alt="BFG 2000">
               </div>
-              <p class="card__title">Перфоратор BOSCH<br>BFG 3000</p>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 2000</p>
               <p class="card__current-price price">12500 р.</p>
             </div>
             <div class="catalog__card card">
@@ -182,7 +201,7 @@
               <div class="card__preview">
                 <img class="card__photo" src="img/products/bfg-2000-3000.jpg" alt="BFG 2000">
               </div>
-              <p class="card__title">Перфоратор BOSCH<br>BFG 3000</p>
+              <p class="card__title">Перфоратор BOSCH<br>BFG 2000</p>
               <p class="card__current-price price">12500 р.</p>
             </div>
           </div>
